--- a/styles/components/_tab.scss
+++ b/styles/components/_tab.scss
@@ -7,6 +7,7 @@
     padding: 1rem;
     min-width: 12rem;
     width: 100%;
+    height: max-content;
     text-align: center;
     color: black;
     font-weight: 600;
